--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "wsd",
+  "version": "0.0.0",
+  "bin": "./main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +18,7 @@
   "author": "goze",
   "license": "MIT",
   "dependencies": {
+    "command-line-args": "^5.1.1",
     "express": "^4.17.1",
     "ws": "^7.3.1"
   },
