--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "author": "goze",
   "license": "MIT",
   "dependencies": {
+    "boxen": "^4.2.0",
     "command-line-args": "^5.1.1",
     "express": "^4.17.1",
+    "internal-ip": "^6.1.0",
     "ws": "^7.3.1"
   },
   "devDependencies": {
